# krigekit

./: .gitignore  .readthedocs.yaml  Makefile  README.md  build_lib.py  build_sparks.py  environment.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py
.github/workflows/: build_wheels.yml  tests.yml
docs/: _build.bat  _build.sh  array_conventions.md  changelog.md  conf.py  index.md  installation.md  installation.md.tmp.3186.b1cc2643120d  quickstart.md  variogram_guide.md  variogram_models.md  variogram_models.rst
docs/api/: index.md
docs/developer_guide/: architecture.md  capi.md  index.md
docs/user_guide/: cokriging.md  index.md  indicator_kriging.md  ordinary_kriging.md  performance.md  sgsim.md  universal_kriging.md
examples/: GALLERY_HEADER.rst  s_coik_lithofacies.py  s_cokriging_walker.py  s_cross_validation.py  s_ked_gwlevel.py  s_ok2d.py  s_ok2d_sgsim.py  s_sis_lithofacies.py
src/krigekit/: __init__.py  kriging.def  kriging.exp  kriging.py  kriging_indicator.py  kriging_indicator.py.tmp.3186.5dbb548d8d83  kriging_st.py
src/libkriging/: 00_compile_lib.bat  common.f90  cov_dispatch.fh  drift.f90  gaussian_quadrature.f90  kdtree2_maxidx.f90  kriging.F90  kriging_base.F90  kriging_capi.F90  kriging_capi.f90  kriging_capi_common.F90  kriging_err.f90  kriging_indicator.F90  kriging_st.F90  kriging_st_capi.f90  nscore.f90  progress_bar.F90  rotation.f90  solver.f90  sposv.f  utils.F90  variogram.f90  variogram_st.f90  vgmfunc.f90
src/pykriging/: __init__.py  _kriging.py  drift.py  kriging.def  kriging.py  kriging_indicator.py  kriging_indicator.py.tmp.3186.6bc7a06df36f  kriging_st.py  meuk.py  meuk_fortran.py  test_ok_simple.py
src/sparks/: sparks.f90
test_data/: aem2d.csv  ctet.csv  ctet_grid_botm.asc  ctet_grid_top.asc  grid2d.csv  grid_simple.csv  gridblock2d.csv  gridblockpnt2d.csv  head2d.csv  lithofacies.csv  obs_gwlevel.csv  obs_simple.csv  path4800.csv  path_simple.csv  pc2d.csv  sample4800.csv  sample_simple.csv
tests/: README.md  _test_persistent_factor.py  conftest.py  test_advanced_kriging.py  test_api.py  test_bk.py  test_cokriging.py  test_cross_validation.py  test_grad.py  test_indicator_kriging.py  test_nscore.py  test_ordinary_kriging.py  test_sector_search.py  test_sgsim.py  test_spacetime_kriging.py  test_sparks_exe.py  test_sva.py  test_update_obs_value.py  test_variogram.py  test_weight_store.py  test_wind_exact.py
tests_py/: README.md  test_kriging_sva.py  test_loadDLL.py  test_ok.py  test_ok_wrapper.py  test_reuse.py  test_sgsim_ok.py
